<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">YKProperties</string>
    <string name="login_logo">Login Logo</string>
    <string name="welcome_to_ykproperties">Welcome to YKProperties</string>
    <string name="choose_sign_in_method">Choose Sign in method</string>
    <string name="search_for_products">Search For Products</string>
    <string name="categories">Categories</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="product_images">Product Images</string>
    <string name="id">ID</string>
    <string name="product_title_sample">Product Title</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="text_yes">yes</string>
    <string name="ascending_or_descending_order">Ascending or descending order</string>
    <string name="text_filter_options">Filter Options</string>
    <string name="filter_by_category">Categories</string>
    <string name="text_author">Author</string>
    <string name="text_date">Date</string>
    <string name="text_filter">Filter</string>
    <string name="category_all">All</string>
    <string name="category_car">Cars</string>
    <string name="category_house">House</string>
    <string name="category_land">Land</string>
    <string name="category_other">Other</string>
    <string name="key_filter">filter</string>
    <string name="key_order">order</string>
    <string name="order_asc">ASC</string>
    <string name="order_desc">DESC</string>
    <string name="sign_in_to_ykproperties">Sign in to YKProperties</string>
    <string name="permission_storage_denied">In order to use this function you have to allow access permission for storage and photos. Do you want to try again?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string-array name="categories">
        <item>House</item>
        <item>Cars</item>
        <item>Land</item>
        <item>Other</item>
    </string-array>

    <string-array name="sale_rent_exchange">
        <item>For Sale</item>
        <item>For Rent</item>
        <item>For Sale/Exchange</item>
    </string-array>

    <string-array name="car_condition">
        <item>Brand New</item>
        <item>Used in Ethiopia</item>
        <item>Not Used in Ethiopia</item>
    </string-array>

    <string-array name="transmission">
        <item>Automatic</item>
        <item>Manual</item>
    </string-array>

    <string-array name="fuel">
        <item>Gasoline</item>
        <item>Diesel</item>
    </string-array>

    <string-array name="seller">
        <item>Owner</item>
        <item>Broker</item>
    </string-array>

    <string-array name="make">
        <item>Abarth</item>
        <item>AC</item>
        <item>Acura</item>
        <item>Adler</item>
        <item>Alfa Romeo</item>
        <item>Alpina</item>
        <item>Alpine</item>
        <item>AM General</item>
        <item>AMC</item>
        <item>Apal</item>
        <item>Ariel</item>
        <item>Aro</item>
        <item>Asia</item>
        <item>Aston Martin</item>
        <item>Auburn</item>
        <item>Audi</item>
        <item>Aurus</item>
        <item>Austin</item>
        <item>Austin Healey</item>
        <item>Autobianchi</item>
        <item>Avtokam</item>
        <item>BAIC</item>
        <item>Bajaj</item>
        <item>Baltijas Dzips</item>
        <item>Batmobile</item>
        <item>Bentley</item>
        <item>Bertone</item>
        <item>Bilenkin</item>
        <item>Bio auto</item>
        <item>Bitter</item>
        <item>BMW</item>
        <item>Borgward</item>
        <item>Brabus</item>
        <item>Brilliance</item>
        <item>Bristol</item>
        <item>Bronto</item>
        <item>Bufori</item>
        <item>Bugatti</item>
        <item>Buick</item>
        <item>BYD</item>
        <item>Byvin</item>
        <item>Cadillac</item>
        <item>Callaway</item>
        <item>Carbodies</item>
        <item>Caterham</item>
        <item>Chana</item>
        <item>Changan</item>
        <item>ChangFeng</item>
        <item>Changhe</item>
        <item>Chery</item>
        <item>CHERYEXEED</item>
        <item>Chevrolet</item>
        <item>Chrysler</item>
        <item>Citroen</item>
        <item>Cizeta</item>
        <item>Coggiola</item>
        <item>Cord</item>
        <item>Cupra</item>
        <item>Dacia</item>
        <item>Dadi</item>
        <item>Daewoo</item>
        <item>DAF</item>
        <item>Daihatsu</item>
        <item>Daimler</item>
        <item>Dallara</item>
        <item>Datsun</item>
        <item>De Tomaso</item>
        <item>Deco Rides</item>
        <item>Delage</item>
        <item>DeLorean</item>
        <item>Derways</item>
        <item>DeSoto</item>
        <item>DKW</item>
        <item>Dodge</item>
        <item>DongFeng</item>
        <item>Doninvest</item>
        <item>Donkervoort</item>
        <item>DS</item>
        <item>DW Hower</item>
        <item>E-Car</item>
        <item>Eagle</item>
        <item>Eagle Cars</item>
        <item>Ecomotors</item>
        <item>Excalibur</item>
        <item>FAW</item>
        <item>Ferrari</item>
        <item>Fiat</item>
        <item>Fisker</item>
        <item>Flanker</item>
        <item>Ford</item>
        <item>Foton</item>
        <item>FSO</item>
        <item>Fuqi</item>
        <item>GAC</item>
        <item>GAZ</item>
        <item>Geely</item>
        <item>Genesis</item>
        <item>Geo</item>
        <item>GMC</item>
        <item>Goggomobil</item>
        <item>Gonow</item>
        <item>Gordon</item>
        <item>GP</item>
        <item>Great Wall</item>
        <item>Hafei</item>
        <item>Haima</item>
        <item>Hanomag</item>
        <item>Haval</item>
        <item>Hawtai</item>
        <item>Heinkel</item>
        <item>Hennessey</item>
        <item>Hindustan</item>
        <item>Hispano-Suiza</item>
        <item>Holden</item>
        <item>Honda</item>
        <item>Horch</item>
        <item>HuangHai</item>
        <item>Hudson</item>
        <item>Hummer</item>
        <item>Hyundai</item>
        <item>Infiniti</item>
        <item>Innocenti</item>
        <item>International</item>
        <item>Invicta</item>
        <item>Iran Khodro</item>
        <item>Isdera</item>
        <item>Isuzu</item>
        <item>IVECO</item>
        <item>Izh</item>
        <item>JAC</item>
        <item>Jaguar</item>
        <item>Jeep</item>
        <item>Jensen</item>
        <item>Jinbei</item>
        <item>JMC</item>
        <item>Kanonir</item>
        <item>Kia</item>
        <item>Koenigsegg</item>
        <item>Kombat</item>
        <item>KTM</item>
        <item>Lada (VAZ)</item>
        <item>Lamborghini</item>
        <item>Lancia</item>
        <item>Land Rover</item>
        <item>Landwind</item>
        <item>Lexus</item>
        <item>Liebao Motor</item>
        <item>Lifan</item>
        <item>Ligier</item>
        <item>Lincoln</item>
        <item>LiXiang</item>
        <item>Logem</item>
        <item>Lotus</item>
        <item>LTI</item>
        <item>LUAZ</item>
        <item>Lucid</item>
        <item>Luxgen</item>
        <item>Mahindra</item>
        <item>Marcos</item>
        <item>Marlin</item>
        <item>Marussia</item>
        <item>Maruti</item>
        <item>Maserati</item>
        <item>Matra</item>
        <item>Maybach</item>
        <item>Mazda</item>
        <item>McLaren</item>
        <item>Mega</item>
        <item>Mercedes-Benz</item>
        <item>Mercury</item>
        <item>Messerschmitt</item>
        <item>Metrocab</item>
        <item>MG</item>
        <item>Microcar</item>
        <item>Minelli</item>
        <item>MINI</item>
        <item>Mitsubishi</item>
        <item>Mitsuoka</item>
        <item>Morgan</item>
        <item>Morris</item>
        <item>Moskvich</item>
        <item>Nash</item>
        <item>Nio</item>
        <item>Nissan</item>
        <item>Noble</item>
        <item>Oldsmobile</item>
        <item>Opel</item>
        <item>Osca</item>
        <item>Packard</item>
        <item>Pagani</item>
        <item>Panoz</item>
        <item>Perodua</item>
        <item>Peugeot</item>
        <item>PGO</item>
        <item>Piaggio</item>
        <item>Plymouth</item>
        <item>Polestar</item>
        <item>Pontiac</item>
        <item>Porsche</item>
        <item>Premier</item>
        <item>Proton</item>
        <item>PUCH</item>
        <item>Puma</item>
        <item>Qoros</item>
        <item>Qvale</item>
        <item>RAM</item>
        <item>Rambler</item>
        <item>Ravon</item>
        <item>Reliant</item>
        <item>Renaissance</item>
        <item>Renault</item>
        <item>Renault Samsung</item>
        <item>Rezvani</item>
        <item>Rimac</item>
        <item>Rinspeed</item>
        <item>Roewe</item>
        <item>Rolls-Royce</item>
        <item>Ronart</item>
        <item>Rover</item>
        <item>Saab</item>
        <item>Saipa</item>
        <item>Saleen</item>
        <item>Santana</item>
        <item>Saturn</item>
        <item>Scion</item>
        <item>Sears</item>
        <item>SEAT</item>
        <item>Shanghai Maple</item>
        <item>ShuangHuan</item>
        <item>Simca</item>
        <item>Skoda</item>
        <item>Smart</item>
        <item>SMZ</item>
        <item>Soueast</item>
        <item>Spectre</item>
        <item>Spyker</item>
        <item>SsangYong</item>
        <item>Steyr</item>
        <item>Studebaker</item>
        <item>Subaru</item>
        <item>Suzuki</item>
        <item>TagAZ</item>
        <item>Talbot</item>
        <item>TATA</item>
        <item>Tatra</item>
        <item>Tazzari</item>
        <item>Tesla</item>
        <item>Think</item>
        <item>Tianma</item>
        <item>Tianye</item>
        <item>Tofas</item>
        <item>Toyota</item>
        <item>Trabant</item>
        <item>Tramontana</item>
        <item>Triumph</item>
        <item>TVR</item>
        <item>UAZ</item>
        <item>Ultima</item>
        <item>Vauxhall</item>
        <item>Vector</item>
        <item>Venturi</item>
        <item>Volkswagen</item>
        <item>Volvo</item>
        <item>Vortex</item>
        <item>W Motors</item>
        <item>Wanderer</item>
        <item>Wartburg</item>
        <item>Weltmeister</item>
        <item>Westfield</item>
        <item>Wiesmann</item>
        <item>Willys</item>
        <item>Xin Kai</item>
        <item>Xpeng</item>
        <item>Yo-mobile</item>
        <item>Yulon</item>
        <item>Zastava</item>
        <item>ZAZ</item>
        <item>Zenos</item>
        <item>Zenvo</item>
        <item>Zibar</item>
        <item>ZIL</item>
        <item>ZiS</item>
        <item>Zotye</item>
        <item>ZX</item>
    </string-array>

</resources>